--- a/templates/food/index.html.twig
+++ b/templates/food/index.html.twig
@@ -9,9 +9,17 @@
 
 <form action="{{ path('app_food_index_busqueda') }}" method="post">
 	<label>Búsqueda:</label>
-	<input type="text" name="busqueda" id="busqueda" value="">
+	<input type="text" name="busqueda" id="busqueda" value="{{ busqueda | default('') }}">
+	<input type="date" name="fechaInicial" id="fechaInicial" value="{{ fechaInicial | default('') }}">
+	<input type="date" name="fechaFinal" id="fechaFinal" value="{{ fechaFinal | default('') }}">
 	<input type="submit" value="Buscar">
 </form>
+
+{% for message in app.flashes('mensaje') %}
+	<div class="alert alert-primary" role="alert">
+		{{ message }}
+	</div>
+{% endfor %}
 
 <table class="table">
 	<thead>
@@ -27,6 +35,7 @@
 				<a href="{{ path("app_food_index_ordenado", {ordenacion: 'categoria'}) }}">Categoria</a>
 			</th>
 			<th>Descripcion</th>
+			<th>Fecha</th>
 			<th>Precio</th>
 			<th>actions</th>
 		</tr>
@@ -39,6 +48,7 @@
 				<td>{{ food.nombre }}</td>
 				<td>{{ food.categoria }}</td>
 				<td>{{ food.descripcion }}</td>
+				<td>{{ food.fecha | date('d/m/Y') }}</td>
 				<td>{{ food.precio|number_format(2, '.', ',') }}</td>
 				<td>
 					<a href="{{ path('app_food_show', {'id': food.id}) }}">show</a>
