--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,6 +9,7 @@
     {{ form_errors(registrationForm) }}
 
     {{ form_start(registrationForm) }}
+        {{ form_row(registrationForm.avatar) }}
         {{ form_row(registrationForm.username) }}
         {{ form_row(registrationForm.plainPassword, {
             label: 'Password'
